--- a/public/reserve.html
+++ b/public/reserve.html
@@ -19,9 +19,9 @@
 
         <div class="jumbotron">
             <h1 class="text-center">
-                <span class="fa fa-fire"></span> </h1>
+                <span class="fa fa-fire"></span>Hot Restaurant</h1>
             <hr>
-            <h2 class="text-center"></h2>
+            <h2 class="text-center">Make Your Reservation</h2>
             <br>
             <div class="text-center">
                 <a href="/tables">
@@ -85,46 +85,46 @@
 
 <script type="text/javascript">
 
-    $(".submit").on("click", function (event) {
-        event.preventDefault();
+    // $(".submit").on("click", function (event) {
+    //     event.preventDefault();
 
         // Here we grab the form elements
-        var newReservation = {
-            customerName: $("#reserve-name").val().trim(),
-            phoneNumber: $("#reserve-phone").val().trim(),
-            customerEmail: $("#reserve-email").val().trim(),
-            customerID: $("#reserve-unique-id").val().trim()
-        };
+        // var newReservation = {
+        //     customerName: $("#reserve-name").val().trim(),
+        //     phoneNumber: $("#reserve-phone").val().trim(),
+        //     customerEmail: $("#reserve-email").val().trim(),
+        //     customerID: $("#reserve-unique-id").val().trim()
+        // };
 
-        console.log(newReservation);
+        // console.log(newReservation);
 
         // This line is the magic. It"s very similar to the standard ajax function we used.
         // Essentially we give it a URL, we give it the object we want to send, then we have a "callback".
         // The callback is the response of the server. In our case, we set up code in api-routes that "returns" true or false
         // depending on if a tables is available or not.
 
-        $.post("/api/tables", newReservation,
-            function (data) {
+        // $.post("/api/tables", newReservation,
+        //     function (data) {
 
                 // If a table is available... tell user they are booked.
-                if (data) {
-                    alert("Yay! You are officially booked!");
-                }
+                // if (data) {
+                //     alert("Yay! You are officially booked!");
+                // }
 
                 // If a table is available... tell user they on the waiting list.
-                else {
-                    alert("Sorry you are on the wait list");
-                }
+                // else {
+                //     alert("Sorry you are on the wait list");
+                // }
 
                 // Clear the form when submitting
-                $("#reserve-name").val("");
-                $("#reserve-phone").val("");
-                $("#reserve-email").val("");
-                $("#reserve-unique-id").val("");
+    //             $("#reserve-name").val("");
+    //             $("#reserve-phone").val("");
+    //             $("#reserve-email").val("");
+    //             $("#reserve-unique-id").val("");
 
-            });
+    //         });
 
-    });
+    // });
 
 
 </script>
