--- a/public/tables.html
+++ b/public/tables.html
@@ -83,7 +83,7 @@
                 console.log(tableData);
                 console.log("______________________");
 
-                for (let i = 0; i < array.length; i++) {
+                for (let i = 0; i < tableData.length; i++) {
                     console.log(tableData[i]);
 
                 }
