--- a/public/reserve.html
+++ b/public/reserve.html
@@ -97,7 +97,7 @@
         };
 
         console.log(newReservation);
-        return fales;
+        return false;
 
         var currentURL = window.location.origin;
 
